# Fregat_Game_Engine

./: README.md
Sources/: CMakeLists.txt
Sources/Core/: BaseScene.cpp  BaseScene.h  Component.cpp  Component.h  Delegat.cpp  Entity.cpp  Entity.h  OBJviewer.cpp  ObjectManager.cpp  ObjectManager.h  Static3DObjectFabriacator.cpp  Static3DObjectFabriacator.h  Transform.cpp  Transform.h  shaders.h
Sources/Core/Assets/AssetsManagement/: AssetBase.h  AssetBin.cpp  AssetsInfo.h  AssetsManager.cpp  AssetsManager.h
Sources/Core/Assets/Render/Components/: RendererComponent.cpp  RendererComponent.h
Sources/Core/Assets/Render/Material/: MaterialBase.h  SimpleMaterial.cpp  SimpleMaterial.h
Sources/Core/Assets/Render/Mesh/: ComplexGeometry3D.cpp  ComplexGeometry3D.h  Geometry3D.cpp  MeshBase.h  MeshPlane.cpp  MeshPlane.h  MeshStatic.cpp  MeshStatic.h
Sources/Core/Assets/Render/Shader/: Shader.cpp  Shader.h
Sources/Core/Assets/Render/Texture/: BitMap2D.cpp  Texture2D.cpp  Texture2D.h  TextureBase.h
Sources/Core/Math/: Mat3.h  Mat4.h  MatOperations.h  MathCommon.h  MatrixUnitTests.cpp  Rect.h  Vec2.h  Vec3.h  Vec4.h  VectorsUnitTests.cpp
Sources/Core/MathLib/: Mat3.h  Mat4.h  MatOperations.h  MathCommon.h  Vec2.h  Vec4.h
Sources/Core/System/Common/: ServiceLocator.h
Sources/Core/System/IO/FileFormats/: OBJimporter.cpp  OBJimporter.h  ParsersDataStructures.h
Sources/Core/System/Renderer/: BaseRenderer.cpp  BaseRenderer.h  Camera.cpp  Camera.h  OpenGL33Renderer.cpp  OpenGL33Renderer.h
Sources/Core/System/Tools/: UUID.h
Sources/Fregat/: CMakeLists.txt  _API.h
Sources/Fregat/MathLib/: AABB.h  EasingLib.h  Mat4.h  MatOperations.h  MathCommon.h  Vec4.h
Sources/Fregat/MathLib/back/: Mat3.h  Mat4.h  MatOperations.h  Vec3.h
Sources/Fregat/MathLib/newBack/: MatOperations.h  MathCommon.h
Sources/Fregat/System/: Static3DObjectFabriacator.cpp  Static3DObjectFabriacator.h
Sources/Fregat/System/Assets/AssetsManagement/: AssetBase.h  AssetBin.h  AssetSys.h  AssetsManager.cpp  AssetsManager.h
Sources/Fregat/System/Assets/Render/Components/: RendererComponent.cpp  RendererComponent.h
Sources/Fregat/System/Assets/Render/Mesh/: ComplexGeometry3D.cpp  Geometry3D.cpp  Geometry3D.h  MeshBase.h  MeshPlane.cpp  MeshPlane.h  MeshStatic.cpp  MeshStatic.h
Sources/Fregat/System/Assets/Render/Shader/: Shader.cpp  Shader.h
Sources/Fregat/System/Assets/Render/Texture/: BitMap2D.h  Texture2D.cpp  Texture2D.h
Sources/Fregat/System/Core/: App.h  Component.cpp  Component.h  Entity.cpp  Entity.h  IService.h  IWindow.h  ObjectManager.cpp  ObjectManager.h  SDLWindow.h  ServiceLocator.cpp  ServiceLocator.h  Transform.h
Sources/Fregat/System/IO/FileFormats/: OBJimporter.cpp  ParsersDataStructures.h
Sources/Fregat/System/IO/Inputs/: BaseInputController.h  SDLInputController.h
Sources/Fregat/System/Renderer/: BaseRenderer.cpp  BaseRenderer.h  Camera.cpp  Camera.h  FPSCamera.cpp  FPSCamera.h  ICamera.h  OpenGL33Renderer.cpp
Sources/Fregat/System/Tools/: Delegat.h  Logger.h  UUID.h
Sources/OBJViewer/: CMakeLists.txt  OBJviewer.cpp  ViewerApp.cpp  ViewerApp.h  ViewerObjectManager.cpp  ViewerObjectManager.h
Sources/OBJViewer/cmake/: shaders_n_runtimelibs.cmake
Sources/Shaders/: simple_with_light.frag  simple_with_light.vert  simple_without_light.frag  simple_without_light.vert
Sources/Tests/: CMakeLists.txt  EntityComponent_tests.h  TestingTools.h  math_test.cpp
Sources/cmake/: 3rd_party.cmake
